<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_today"
        android:title="Calendar" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/portfolio"
        android:title="Account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="Settings" />

</menu>
