...
        android:layout_marginBottom="512dp"
        android:text="User"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toEndOf="@+id/balance"
        app:layout_constraintTop_toBottomOf="@+id/owner_title"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/owner_title"
        android:layout_width="wrap_content"
...
